--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,6 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca
@@ -528,6 +529,43 @@ TextRenderComponent.HLOD=True
 TextRenderComponent.Navigation=True
 TextRenderComponent.Tags=True
 TextRenderComponent.Cooking=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.AnimationRig=True
+SkeletalMeshActor.Deformer=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.HLOD=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.WorldPartition=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -564,7 +602,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info=
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -598,13 +636,14 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
+BoneProxy="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
 BRUSH=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
 FBX=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
 FBXAnim=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
-GenericImport=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
+GenericImport=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/ObstacleCourse2023/animations/Neo_Idle.fbx
 GenericExport=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
 GenericOpen=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
 GenericSave=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content/
@@ -1539,7 +1578,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1574,8 +1613,43 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSize=2
+GlobalAssetPicker.CurrentViewType=0
+SequenceBrowser.ActiveTypeFilters=
+SequenceBrowser.EnabledTypeFilters=
+SequenceBrowser.ActiveFrontendFilters=
+SequenceBrowser.EnabledFrontendFilters=
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/Characters/Player/Animations/neo10.neo10;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -1742,27 +1816,37 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/blade_BP
-MRUItem1=/Game/Blueprints/BP_Enemy
-MRUItem2=/Game/spin_bp
-MRUItem3=/Game/Door_BP
-MRUItem4=/Game/trip_bp
-MRUItem5=/Game/Blueprints/Launchpad_2
-MRUItem6=/Game/spin_bp_rev
-MRUItem7=/Game/Obstacle_Blueprint
-MRUItem8=/Game/Cone_Blueprint
-MRUItem9=/Game/Blueprints/Launchpad
-MRUItem10=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem11=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem0=/Game/Characters/Player/Animations/Motions/Neo_Idle
+MRUItem1=/Game/Characters/Player/Animations/neo10_Skeleton
+MRUItem2=/Game/Characters/Player/Animations/neo10
+MRUItem3=/Game/Characters/Player/Animations/Neo_Idle
+MRUItem4=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/Characters/Player/neo10
+MRUItem7=/Game/Characters/Player/neo10_Skeleton
+MRUItem8=/Game/blade_BP
+MRUItem9=/Game/Blueprints/BP_Enemy
+MRUItem10=/Game/spin_bp
+MRUItem11=/Game/Door_BP
+MRUItem12=/Game/trip_bp
+MRUItem13=/Game/Blueprints/Launchpad_2
+MRUItem14=/Game/spin_bp_rev
+MRUItem15=/Game/Obstacle_Blueprint
+MRUItem16=/Game/Cone_Blueprint
+MRUItem17=/Game/Blueprints/Launchpad
+MRUItem18=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Launchpad.Launchpad=1
@@ -1776,6 +1860,9 @@ Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 /Temp/Autosaves/Game/ob_course_joint_ca_Auto9.ob_course_joint_ca_Auto9:PersistentLevel.ob_course_joint_ca_Auto9=1
 /Temp/Autosaves/Game/ob_course_joint_ca_Auto7.ob_course_joint_ca_Auto7:PersistentLevel.ob_course_joint_ca_Auto7=1
 /Game/Blueprints/BP_Enemy.BP_Enemy=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin=1
+/Game/Characters/Player/Animations/Model/neo10_Skeleton.neo10_Skeleton=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
