--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -566,6 +566,18 @@ SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
 BoneProxy.Bone=True
 BoneProxy.Transforms=True
+AnimSequence.Animation=True
+AnimSequence.Compression=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.Animation Model=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -637,6 +649,9 @@ BrushComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
 BoneProxy="\"Object\" "
+AnimSequence="\"Object\" "
+AnimSequenceBase="\"Object\" "
+AnimationAsset="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1578,7 +1593,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations/Motions
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1820,25 +1835,25 @@ LastLogListing=FBXImport
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Characters/Player/Animations/Motions/Neo_Idle
-MRUItem1=/Game/Characters/Player/Animations/neo10_Skeleton
-MRUItem2=/Game/Characters/Player/Animations/neo10
-MRUItem3=/Game/Characters/Player/Animations/Neo_Idle
-MRUItem4=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/Characters/Player/neo10
-MRUItem7=/Game/Characters/Player/neo10_Skeleton
-MRUItem8=/Game/blade_BP
-MRUItem9=/Game/Blueprints/BP_Enemy
-MRUItem10=/Game/spin_bp
-MRUItem11=/Game/Door_BP
-MRUItem12=/Game/trip_bp
-MRUItem13=/Game/Blueprints/Launchpad_2
-MRUItem14=/Game/spin_bp_rev
-MRUItem15=/Game/Obstacle_Blueprint
-MRUItem16=/Game/Cone_Blueprint
-MRUItem17=/Game/Blueprints/Launchpad
-MRUItem18=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
-MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide
+MRUItem1=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem2=/Game/Characters/Player/Animations/neo10_Skeleton
+MRUItem3=/Game/Characters/Player/Animations/neo10
+MRUItem4=/Game/Characters/Player/Animations/Neo_Idle
+MRUItem5=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Characters/Player/neo10
+MRUItem8=/Game/Characters/Player/neo10_Skeleton
+MRUItem9=/Game/blade_BP
+MRUItem10=/Game/Blueprints/BP_Enemy
+MRUItem11=/Game/spin_bp
+MRUItem12=/Game/Door_BP
+MRUItem13=/Game/trip_bp
+MRUItem14=/Game/Blueprints/Launchpad_2
+MRUItem15=/Game/spin_bp_rev
+MRUItem16=/Game/Obstacle_Blueprint
+MRUItem17=/Game/Cone_Blueprint
+MRUItem18=/Game/Blueprints/Launchpad
+MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1847,6 +1862,8 @@ Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Launchpad.Launchpad=1
