--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -578,9 +578,32 @@ AnimSequence.CustomAttributes=True
 AnimSequence.Animation Model=True
 AnimSequence.MetaData=True
 AnimSequence.Thumbnail=True
+Neo_Blueprint_C.RootMotion=True
+Neo_Blueprint_C.Notifies=True
+Neo_Blueprint_C.Montage=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+AnimGraphNode_StateMachine.Functions=True
+AnimGraphNode_StateMachine.Tag=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_SequencePlayer.Sync=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_SequencePlayer.Functions=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Tag=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_TransitionResult.Functions=True
+AnimGraphNode_TransitionResult.Tag=True
+Neo_Blueprint_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Characters/Player/Animations/Neo_BS.Neo_BS
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -617,7 +640,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -652,6 +675,19 @@ BoneProxy="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
 AnimationAsset="\"Object\" "
+Neo_Blueprint_C="\"Object\" "
+AnimInstance="\"Object\" "
+AnimGraphNode_StateMachine="\"Object\" "
+AnimGraphNode_StateMachineBase="\"Object\" "
+AnimGraphNode_Base="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
+AnimStateNode="\"Object\" "
+AnimStateNodeBase="\"Object\" "
+AnimStateTransitionNode="\"Object\" "
+AnimGraphNode_SequencePlayer="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
+AnimGraphNode_TransitionResult="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1593,7 +1629,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations/Motions
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1834,26 +1870,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Player/Animations/Motions/Neo_Idle
-MRUItem1=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem2=/Game/Characters/Player/Animations/neo10_Skeleton
-MRUItem3=/Game/Characters/Player/Animations/neo10
-MRUItem4=/Game/Characters/Player/Animations/Neo_Idle
-MRUItem5=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/Characters/Player/neo10
-MRUItem8=/Game/Characters/Player/neo10_Skeleton
-MRUItem9=/Game/blade_BP
-MRUItem10=/Game/Blueprints/BP_Enemy
-MRUItem11=/Game/spin_bp
-MRUItem12=/Game/Door_BP
-MRUItem13=/Game/trip_bp
-MRUItem14=/Game/Blueprints/Launchpad_2
-MRUItem15=/Game/spin_bp_rev
-MRUItem16=/Game/Obstacle_Blueprint
-MRUItem17=/Game/Cone_Blueprint
-MRUItem18=/Game/Blueprints/Launchpad
-MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/Running_Slide_PhysicsAsset
+MRUItem0=/Game/Characters/Player/Animations/Neo_BS
+MRUItem1=/Game/Characters/Player/Animations/Motions/Neo_Idle
+MRUItem2=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem3=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem4=/Game/Characters/Player/Animations/neo10_Skeleton
+MRUItem5=/Game/Characters/Player/Animations/neo10
+MRUItem6=/Game/Characters/Player/Animations/Neo_Idle
+MRUItem7=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Characters/Player/neo10
+MRUItem10=/Game/Characters/Player/neo10_Skeleton
+MRUItem11=/Game/blade_BP
+MRUItem12=/Game/Blueprints/BP_Enemy
+MRUItem13=/Game/spin_bp
+MRUItem14=/Game/Door_BP
+MRUItem15=/Game/trip_bp
+MRUItem16=/Game/Blueprints/Launchpad_2
+MRUItem17=/Game/spin_bp_rev
+MRUItem18=/Game/Obstacle_Blueprint
+MRUItem19=/Game/Cone_Blueprint
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
