Animation blueprint smoothening

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -130,6 +130,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca
@@ -600,6 +601,16 @@ AnimGraphNode_TransitionResult.Result=True
 AnimGraphNode_TransitionResult.Functions=True
 AnimGraphNode_TransitionResult.Tag=True
 Neo_Blueprint_C.Default=True
+BlendSpace1D.InputInterpolation=True
+BlendSpace1D.Axis Settings=True
+BlendSpace1D.Analysis=True
+BlendSpace1D.SampleSmoothing=True
+BlendSpace1D.Animation=True
+BlendSpace1D.AdditiveSettings=True
+BlendSpace1D.AnimationNotifies=True
+BlendSpace1D.MetaData=True
+BlendSpace1D.Thumbnail=True
+BlendSpace1D.BlendSamples=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -640,7 +651,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -688,6 +699,8 @@ AnimStateTransitionNode="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_TransitionResult="\"Object\" "
+BlendSpace1D="\"Object\" "
+BlendSpace="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
