--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 WorldSettings=WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
-BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca
@@ -611,10 +611,49 @@ BlendSpace1D.AnimationNotifies=True
 BlendSpace1D.MetaData=True
 BlendSpace1D.Thumbnail=True
 BlendSpace1D.BlendSamples=True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Physics=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Neo_BS.Neo_BS
+OpenAssetsAtExit=/Game/Characters/Player/Animations/Neo_Blueprint.Neo_Blueprint
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -701,6 +740,9 @@ AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_TransitionResult="\"Object\" "
 BlendSpace1D="\"Object\" "
 BlendSpace="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+K2Node_InputKey="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1642,7 +1684,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1767,6 +1809,8 @@ TimelineEnabledSnaps=MontageSection
 FbxImportUI.Mesh=False
 K2Node_VariableGet.Variable=False
 PropertyWrapper.Variable=False
+BlendSpace1D.Animation=True
+SkeletalMeshComponent.Animation=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1883,15 +1927,15 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Player/Animations/Neo_BS
-MRUItem1=/Game/Characters/Player/Animations/Motions/Neo_Idle
-MRUItem2=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem3=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem4=/Game/Characters/Player/Animations/neo10_Skeleton
-MRUItem5=/Game/Characters/Player/Animations/neo10
-MRUItem6=/Game/Characters/Player/Animations/Neo_Idle
-MRUItem7=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Characters/Player/Animations/Neo_BS
+MRUItem2=/Game/Characters/Player/Animations/Motions/Neo_Idle
+MRUItem3=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem4=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem5=/Game/Characters/Player/Animations/neo10_Skeleton
+MRUItem6=/Game/Characters/Player/Animations/neo10
+MRUItem7=/Game/Characters/Player/Animations/Neo_Idle
+MRUItem8=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
 MRUItem9=/Game/Characters/Player/neo10
 MRUItem10=/Game/Characters/Player/neo10_Skeleton
 MRUItem11=/Game/blade_BP
@@ -1929,6 +1973,7 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
 /Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin=1
 /Game/Characters/Player/Animations/Model/neo10_Skeleton.neo10_Skeleton=1
+/Game/Characters/Player/Animations/Neo_BS.Neo_BS=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
