Created enemy blendspace and animation blueprint

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -653,6 +653,13 @@ CharacterMovementComponent.ComponentReplication=True
 CharacterMovementComponent.Activation=True
 CharacterMovementComponent.Cooking=True
 CharacterMovementComponent.Events=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+Enemy_ABP_C.RootMotion=True
+Enemy_ABP_C.Notifies=True
+Enemy_ABP_C.Montage=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -692,7 +699,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -748,9 +755,12 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+BP_ThirdPersonCharacter_C=
+Character=
+Pawn=
+Blueprint="\"Object\" "
+BlueprintCore="\"Object\" "
+Enemy_ABP_C="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1663,6 +1673,8 @@ PhysicsAssetEditor.TimeStamp=2022.09.20-17.47.36
 PhysicsAssetEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.09.20-17.47.04
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.09.20-17.47.44
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1693,7 +1705,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy/Enemy_Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1820,6 +1832,7 @@ K2Node_VariableGet.Variable=False
 PropertyWrapper.Variable=False
 BlendSpace1D.Animation=True
 SkeletalMeshComponent.Animation=False
+Blueprint.ClassOptions=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1936,26 +1949,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Characters/Player/Animations/Neo_BS
-MRUItem2=/Game/Characters/Player/Animations/Motions/Neo_Idle
-MRUItem3=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem4=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem5=/Game/Characters/Player/Animations/neo10_Skeleton
-MRUItem6=/Game/Characters/Player/Animations/neo10
-MRUItem7=/Game/Characters/Player/Animations/Neo_Idle
-MRUItem8=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem9=/Game/Characters/Player/neo10
-MRUItem10=/Game/Characters/Player/neo10_Skeleton
-MRUItem11=/Game/blade_BP
-MRUItem12=/Game/Blueprints/BP_Enemy
-MRUItem13=/Game/spin_bp
-MRUItem14=/Game/Door_BP
-MRUItem15=/Game/trip_bp
-MRUItem16=/Game/Blueprints/Launchpad_2
-MRUItem17=/Game/spin_bp_rev
-MRUItem18=/Game/Obstacle_Blueprint
-MRUItem19=/Game/Cone_Blueprint
+MRUItem0=/Game/Characters/Enemy/Enemy_Animations/Enemy_Blendspace
+MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Walking
+MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
+MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Walking
+MRUItem4=/Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle
+MRUItem5=/Game/Characters/Enemy/Enemy_Double_Leg_Takedown_-_Victim
+MRUItem6=/Game/Characters/Enemy/Enemy_ABP
+MRUItem7=/Game/Characters/Enemy/BP_Enemy
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/Blueprints/BP_Enemy
+MRUItem10=/Game/Characters/Player/Animations/Neo_BS
+MRUItem11=/Game/Characters/Player/Animations/Motions/Neo_Idle
+MRUItem12=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem13=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem14=/Game/Characters/Player/Animations/neo10_Skeleton
+MRUItem15=/Game/Characters/Player/Animations/neo10
+MRUItem16=/Game/Characters/Player/Animations/Neo_Idle
+MRUItem17=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem18=/Game/Characters/Player/neo10
+MRUItem19=/Game/Characters/Player/neo10_Skeleton
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1986,6 +1999,9 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Player/Animations/Model/neo10_Skeleton.neo10_Skeleton=1
 /Game/Characters/Player/Animations/Neo_BS.Neo_BS=1
 /Game/Characters/Player/Animations/Neo_Blueprint.Neo_Blueprint=1
+/Game/Characters/Enemy/BP_Enemy.BP_Enemy=1
+/Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle.Enemy_Bouncing_Fight_Idle=1
+/Game/Characters/Enemy/Enemy_Animations/Enemy_Walking.Enemy_Walking=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
