Blendspace, animation blueprint, enemy AI

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,6 +135,10 @@ K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_2
@@ -660,9 +664,70 @@ Blueprint.Thumbnail=True
 Enemy_ABP_C.RootMotion=True
 Enemy_ABP_C.Notifies=True
 Enemy_ABP_C.Montage=True
+Enemy_ABP_C.Default=True
+BP_Enemy_AI_C.Tick=True
+BP_Enemy_AI_C.Replication=True
+BP_Enemy_AI_C.Rendering=True
+BP_Enemy_AI_C.Collision=True
+BP_Enemy_AI_C.Actor=True
+BP_Enemy_AI_C.Input=True
+BP_Enemy_AI_C.HLOD=True
+BP_Enemy_AI_C.WorldPartition=True
+BP_Enemy_AI_C.Events=True
+BP_Enemy_AI_C.Character=True
+BP_Enemy_AI_C.Camera=True
+BP_Enemy_AI_C.Pawn=True
+BP_Enemy_AI_C.TransformCommon=True
+BP_Enemy_AI_C.Animation=True
+BP_Enemy_AI_C.Mesh=True
+BP_Enemy_AI_C.Clothing=True
+BP_Enemy_AI_C.Physics=True
+BP_Enemy_AI_C.MasterPoseComponent=True
+BP_Enemy_AI_C.Lighting=True
+BP_Enemy_AI_C.AnimationRig=True
+BP_Enemy_AI_C.Deformer=True
+BP_Enemy_AI_C.SkinWeights=True
+BP_Enemy_AI_C.Navigation=True
+BP_Enemy_AI_C.VirtualTexture=True
+BP_Enemy_AI_C.Tags=True
+BP_Enemy_AI_C.Activation=True
+BP_Enemy_AI_C.Cooking=True
+BP_Enemy_AI_C.Character Movement (General Settings)=True
+BP_Enemy_AI_C.Character Movement: Walking=True
+BP_Enemy_AI_C.Character Movement: Jumping / Falling=True
+BP_Enemy_AI_C.Character Movement (Networking)=True
+BP_Enemy_AI_C.Character Movement: Swimming=True
+BP_Enemy_AI_C.Character Movement: Flying=True
+BP_Enemy_AI_C.Character Movement: Custom Movement=True
+BP_Enemy_AI_C.Character Movement (Rotation Settings)=True
+BP_Enemy_AI_C.Character Movement: Physics Interaction=True
+BP_Enemy_AI_C.Character Movement=True
+BP_Enemy_AI_C.Character Movement: Avoidance=True
+BP_Enemy_AI_C.RootMotion=True
+BP_Enemy_AI_C.Character Movement: NavMesh Movement=True
+BP_Enemy_AI_C.NavMovement=True
+BP_Enemy_AI_C.Velocity=True
+BP_Enemy_AI_C.PlanarMovement=True
+BP_Enemy_AI_C.MovementComponent=True
+BP_Enemy_AI_C.Shape=True
+BP_Enemy_AI_C.Materials=True
+RecastNavMesh.TransformCommon=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Collision=True
+RecastNavMesh.HLOD=True
+RecastNavMesh.WorldPartition=True
+Enemy_AI_ABP_C.RootMotion=True
+Enemy_AI_ABP_C.Notifies=True
+Enemy_AI_ABP_C.Montage=True
+BP_Enemy_AI_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Characters/Enemy/Enemy_BlendSpace1D.Enemy_BlendSpace1D
+OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -699,7 +764,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -761,6 +826,7 @@ Pawn=
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
+Enemy_AI_ABP_C="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -1705,7 +1771,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy/Enemy_Animations
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1776,11 +1842,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI;
 RecentlyPlaced=/Game/Characters/Player/Animations/neo10.neo10;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/Blueprints/BP_Enemy.BP_Enemy;
+RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Game/Door_BP.Door_BP;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/spin_bp.spin_bp;
@@ -1949,26 +2016,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Enemy/Enemy_Animations/Enemy_Blendspace
-MRUItem1=/Game/Characters/Enemy/Enemy_Animations/Walking
-MRUItem2=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
-MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Walking
-MRUItem4=/Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle
-MRUItem5=/Game/Characters/Enemy/Enemy_Double_Leg_Takedown_-_Victim
+MRUItem0=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem1=/Game/Characters/Enemy/Enemy_AI_ABP
+MRUItem2=/Game/Characters/Enemy/Enemy_BlendSpace1D
+MRUItem3=/Game/Characters/Enemy/Enemy_Animations/Enemy_Blendspace
+MRUItem4=/Game/Characters/Enemy/Enemy_Animations/Enemy_Fast_Walking
+MRUItem5=/Game/Characters/Enemy/Enemy_BlendSpace
 MRUItem6=/Game/Characters/Enemy/Enemy_ABP
 MRUItem7=/Game/Characters/Enemy/BP_Enemy
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/Blueprints/BP_Enemy
-MRUItem10=/Game/Characters/Player/Animations/Neo_BS
-MRUItem11=/Game/Characters/Player/Animations/Motions/Neo_Idle
-MRUItem12=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem13=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem14=/Game/Characters/Player/Animations/neo10_Skeleton
-MRUItem15=/Game/Characters/Player/Animations/neo10
-MRUItem16=/Game/Characters/Player/Animations/Neo_Idle
-MRUItem17=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem18=/Game/Characters/Player/neo10
-MRUItem19=/Game/Characters/Player/neo10_Skeleton
+MRUItem8=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem9=/Game/Characters/Player/Animations/Neo_BS
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/Characters/Enemy/Enemy_Animations/Walking
+MRUItem12=/Game/Characters/Enemy/Enemy_Animations/Bouncing_Fight_Idle
+MRUItem13=/Game/Characters/Enemy/Enemy_Animations/Enemy_Walking
+MRUItem14=/Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle
+MRUItem15=/Game/Characters/Enemy/Enemy_Double_Leg_Takedown_-_Victim
+MRUItem16=/Game/Blueprints/BP_Enemy
+MRUItem17=/Game/Characters/Player/Animations/Motions/Neo_Idle
+MRUItem18=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem19=/Game/Characters/Player/Animations/neo10_Skeleton
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2002,6 +2069,8 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Characters/Enemy/BP_Enemy.BP_Enemy=1
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Bouncing_Fight_Idle.Enemy_Bouncing_Fight_Idle=1
 /Game/Characters/Enemy/Enemy_Animations/Enemy_Walking.Enemy_Walking=1
+/Game/Characters/Enemy/Enemy_Animations/Enemy_Blendspace.Enemy_Blendspace=1
+/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
